--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,10 @@
 <div class="about text-center">
   <p id="title">About</p>
   <div class="d-flex justify-content-center gap-5 pb-5">
-    <div>
+    <div data-aos="zoom-in" data-aos-duration="2000">
       <img src="../../assets/img/FotoPort.png" alt="Foto Personale">
     </div>
-    <div>
+    <div data-aos="zoom-in" data-aos-duration="2000">
       <p id="nome"><span>&lt; </span>Gustavo Oliveira<span> /&gt;</span></p>
       <ul>
         <li><i class="bi bi-code-slash"></i> Desenvolvedor Web desde 2022</li>
@@ -14,4 +14,45 @@
       </ul>
     </div>
   </div>
+  <p id="title2">
+    Habilidade
+  </p>
+  <div class="skillsContent">
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon1 devicon-angularjs-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon2 devicon-html5-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class=" icon icon3 devicon-css3-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class=" icon icon4 devicon-javascript-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon5 devicon-typescript-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon6 devicon-bootstrap-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon7 devicon-sass-original"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon8 devicon-java-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon9 devicon-nodejs-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon10 devicon-postgresql-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon11 devicon-spring-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon12 devicon-github-original"></i>
+    </div>
+</div>
 </div>
