--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,13 +2,13 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img
-        src="../../assets/img/Logo Portfolio.svg"
+        src="../../assets/img/Logoportfolio.svg"
         alt="Bootstrap"
       />
     </a>
   </div>
   <div class="">
-    <a class="navLink" href="#">home</a>
+    <a class="navLink" href="../home/home.component.html">home</a>
   </div>
   <div class="px-5">
     <a class="navLink" href="#">progetti</a>
