--- a/assets/css/home.component.css
+++ b/assets/css/home.component.css
@@ -1,20 +1,19 @@
-.home{
+.home {
   background-color: black;
   padding-top: 8rem;
 }
 
-#ciao{
+#ciao {
   font-size: 4.5rem;
   font-weight: 700;
   color: white;
-
 }
 
-span{
-  color:#69DFEB;
+span {
+  color: #69DFEB;
 }
 
-#full{
+#full {
   font-size: 1.6rem;
   padding: 1rem 1rem 3rem;
   color: white;
@@ -24,14 +23,14 @@ button {
   position: relative;
   padding: 12px 35px;
   background: #69DFEB;
-  width: 270px;
-  font-size: 15px;
+  width: 200px;
+  font-size: 17px;
   font-weight: 500;
   color: #181818;
   border: 3px solid #69DFEB;
   border-radius: 8px;
   box-shadow: 0 0 0 #69DFEB;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .star-1 {
@@ -75,7 +74,7 @@ button {
   height: auto;
   filter: drop-shadow(0 0 0 #fffdef);
   z-index: -5;
-  transition: all .8s cubic-bezier(0, 0.4, 0, 1.01);
+  transition: all 0.8s cubic-bezier(0, 0.4, 0, 1.01);
 }
 
 .star-5 {
@@ -86,7 +85,7 @@ button {
   height: auto;
   filter: drop-shadow(0 0 0 #fffdef);
   z-index: -5;
-  transition: all .6s cubic-bezier(0, 0.4, 0, 1.01);
+  transition: all 0.6s cubic-bezier(0, 0.4, 0, 1.01);
 }
 
 .star-6 {
@@ -97,7 +96,7 @@ button {
   height: auto;
   filter: drop-shadow(0 0 0 #fffdef);
   z-index: -5;
-  transition: all .8s ease;
+  transition: all 0.8s ease;
 }
 
 button:hover {
@@ -167,10 +166,10 @@ button:hover .star-6 {
 }
 
 .fil0 {
-  fill: #FFFDEF
+  fill: #FFFDEF;
 }
 
-.icon{
+.icon {
   font-size: 30px;
   padding-top: 7rem;
 }
@@ -182,13 +181,10 @@ button:hover .star-6 {
 }
 
 @keyframes arrowDown {
-
-  0%,
-  100% {
-      transform: translateY(0);
+  0%, 100% {
+    transform: translateY(0);
   }
-
   50% {
-      transform: translateY(-20px);
+    transform: translateY(-20px);
   }
-}
+}/*# sourceMappingURL=home.component.css.map */
