--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,14 +1,12 @@
 nav {
   background-color: black;
   height: 100px;
-  position: sticky;
   top: 0;
 }
 
 img{
-  width: 170px;
-  height: 170px;
-  padding: 1dvb;
+  width: 140px;
+  padding-top: 1rem;
 }
 
 .navLink {
