--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,6 +1,28 @@
 <div class="contacts text-center">
   <p id="title">Contacts</p>
-  <div class="d-flex justify-content-center pb-5" data-aos="slide-up" data-aos-duration="2000">
+  <div class="socialMedias">
+    <a class="socialMediaLogo linkedin" data-aos="fade-up" data-aos-duration="2000" href="https://www.linkedin.com/in/gustavochead/" target="_blank">
+      <i class="linkedinLogo bi bi-linkedin"></i>
+      <p class="mediaName">Linkedin/GustavoChead/</p>
+    </a>
+    <a class="socialMediaLogo github" data-aos="fade-up" data-aos-duration="2000" href="https://github.com/Gust4voo" target="_blank">
+      <i class="githubLogo bi bi-github"></i>
+      <p class="mediaName">Github/Gust4voo</p>
+    </a>
+    <a class="socialMediaLogo instagram" data-aos="fade-up" data-aos-duration="2000" href="https://www.instagram.com/guz.oliveiraa/" target="_blank">
+      <i class="instagramLogo bi bi-instagram"></i>
+      <p class="mediaName">Instagram/Guz.oliveiraa</p>
+    </a>
+    <a class="socialMediaLogo phone" data-aos="fade-up" data-aos-duration="2000" href="https://wa.me/393207270107" target="_blank">
+      <i class="phoneLogo bi bi-phone"></i>
+      <p class="mediaName">+39 3207270107</p>
+    </a>
+    <a class="socialMediaLogo2 email" data-aos="fade-up" data-aos-duration="2000" href="https://accounts.google.com/InteractiveLogin/signinchooser?elo=1&ifkv=AVQVeywoug4unCS79TyPuqH3cFzoiE5INVCtk0phcPDRhKlgjdglUT8UdC9AeQqlHg_2q2XFV_VZ0Q&theme=glif&flowName=GlifWebSignIn&flowEntry=ServiceLogin" target="_blank">
+      <i class="emailLogo bi bi-envelope"></i>
+      <p class="mediaName">Gustavo.Oliveira.Abdo.Chead@gmail.com</p>
+    </a>
+  </div>
+  <div class="spazio d-flex justify-content-center pb-5" data-aos="slide-up" data-aos-duration="2000">
     <div class="form-container">
       <form class="form">
         <div class="form-group">
