--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -10,6 +10,10 @@
   padding-top: 12rem;
 }
 
+.spazio{
+  padding-top: 9rem;
+}
+
 .form-container {
   width: 1100px;
   background: linear-gradient(#000000, #000000) padding-box,
@@ -175,6 +179,91 @@ button:active {
   -moz-transition: box-shadow 0.2s ease-in;
   transition: box-shadow 0.2s ease-in;
 }
+
+.linkedinLogo,
+.githubLogo,
+.phoneLogo,
+.instagramLogo,
+.emailLogo {
+    color: #fff;
+    font-size: 2.5rem;
+    transition: .5s;
+}
+
+.linkedin:hover {
+    .linkedinLogo {
+        color: #0077B5;
+    }
+}
+
+.github:hover {
+    .githubLogo {
+        color: #a453f0;
+    }
+}
+
+.instagram:hover {
+    .instagramLogo {
+        color: #eb01bb;
+    }
+}
+
+.email:hover {
+  .emailLogo {
+      color: #eb4132;
+  }
+}
+
+.phone:hover {
+  .phoneLogo {
+      color: #96f870;
+  }
+}
+
+.socialMedias {
+    align-items: center;
+    justify-content: center;
+    padding: 0rem 1rem;
+    display: flex;
+    gap: 4rem;
+    flex-wrap: wrap;
+}
+
+.socialMediaLogo {
+    cursor: pointer;
+    background-color: #33333342;
+    border-radius: .5rem;
+    padding: 1.5rem 0rem;
+    width: 18rem;
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.socialMediaLogo2 {
+  cursor: pointer;
+  background-color: #33333342;
+  border-radius: .5rem;
+  padding: 1.5rem 0rem;
+  width: 26rem;
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.mediaName {
+    color: #949494;
+    font-size: 1rem;
+    font-weight: 500;
+    margin-bottom: 0;
+}
+
 
 
 
