--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="footer">
+  <p id="gustavo">
+    &#169; Gustavo Oliveira 2023
+  </p>
+  <i (click)="scrollToTop()" class=" icon bi bi-arrow-up-circle "></i>
+</div>
