--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,5 +1,5 @@
 .about{
-  background-color: black;
+  background-color: #252525;
 }
 
 #title{
@@ -34,6 +34,7 @@ span{
 li{
  color: white;
  list-style-type: none;
+ width: 40rem;
 }
 
 .bi{
