--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
 .home{
-  background-color: black;
+  background-color: #252525;
   padding-top: 8rem;
 }
 
@@ -27,7 +27,7 @@ button {
   width: 270px;
   font-size: 15px;
   font-weight: 500;
-  color: #181818;
+  color: #252525;
   border: 3px solid #69DFEB;
   border-radius: 8px;
   box-shadow: 0 0 0 #69DFEB;
