--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 
 html{
-  background-color: black;
+  background-color: #252525;
 }
 
 ::-webkit-scrollbar {
   width: .5rem;
-  background-color: black;
+  background-color: #252525;
 }
 
 ::-webkit-scrollbar-thumb:hover {
