--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -2,20 +2,18 @@
   <p id="title">About</p>
   <div class="d-flex justify-content-center gap-5 pb-5">
     <div data-aos="zoom-in" data-aos-duration="2000">
-      <img src="../../assets/img/FotoPort.png" alt="Foto Personale">
+      <img src="../../assets/img/fotoPort (2).png" alt="Foto Personale">
     </div>
     <div data-aos="zoom-in" data-aos-duration="2000">
       <p id="nome"><span>&lt; </span>Gustavo Oliveira<span> /&gt;</span></p>
       <ul>
-        <li><i class="bi bi-code-slash"></i> Desenvolvedor Web desde 2022</li>
-        <li><i class="bi bi-pc-display"></i> Cursando Ciência da Computação</li>
-        <li><i class="bi bi-braces"></i> Interesse em Densenvolvimento Front End</li>
-        <li><i class="bi bi-search"></i> Desenvolvedor Web desde 2022</li>
+        <li><i class="bi bi-pc-display"></i> Ciao, sono Gustavo Oliveira ho 22 anni. Sono nato in Brasile e vissuto per 6 anni in Giappone, da sempre abituato a viaggiare e a ripristinare efficacemente l'equilibrio.
+          Dinamico diplomato in Amministrazione Finanza e Marketing, sono entusiasta di cimentarmi all’interno del mondo del lavoro per accrescere le mie competenze. Ho sviluppato in questo percorso di vita un'ardente passione per lo sviluppo web tanto da voler subito applicare quanto appreso, Da sempre appassionato al mondo dell’informatica, con capacità di lavorare bene sia in gruppo sia in autonomia.</li>
       </ul>
     </div>
   </div>
   <p id="title2">
-    Habilidade
+    Skills
   </p>
   <div class="skillsContent">
     <div data-aos="fade-up" data-aos-duration="2000">
