--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
 <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 <app-navbar></app-navbar>
-<app-home></app-home>
-<app-about></app-about>
-<app-contacts></app-contacts>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
+
 
