--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,28 +1,309 @@
 <div class="home text-center pb-5">
   <p id="ciao">CIAO, SONO GUSTAVO OLIVEIRA<span>.</span></p>
-  <p id="full"><span>Full-Stack</span> Developer innamorato per <span>creare</span> sjdlfjdf dfj dfjhdhfd</p>
+  <p id="full">
+    <span>Full-Stack</span> Developer innamorato per
+    <span>creare</span> sjdlfjdf dfj dfjhdhfd
+  </p>
   <a href="../../assets/img/CV Gustavo Oliveira.pdf" target="_blank">
-  <button>Scarica il mio curriculum <i class=" ps-1 bi bi-download"></i>
-    <div class="star-1">
-      <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><defs></defs><g id="Layer_x0020_1"><metadata id="CorelCorpID_0Corel-Layer"></metadata><path d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z" class="fil0"></path></g></svg>
-    </div>
-    <div class="star-2">
-      <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><defs></defs><g id="Layer_x0020_1"><metadata id="CorelCorpID_0Corel-Layer"></metadata><path d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z" class="fil0"></path></g></svg>
-    </div>
-    <div class="star-3">
-      <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><defs></defs><g id="Layer_x0020_1"><metadata id="CorelCorpID_0Corel-Layer"></metadata><path d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z" class="fil0"></path></g></svg>
-    </div>
-    <div class="star-4">
-      <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><defs></defs><g id="Layer_x0020_1"><metadata id="CorelCorpID_0Corel-Layer"></metadata><path d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z" class="fil0"></path></g></svg>
-    </div>
-    <div class="star-5">
-      <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><defs></defs><g id="Layer_x0020_1"><metadata id="CorelCorpID_0Corel-Layer"></metadata><path d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z" class="fil0"></path></g></svg>
-    </div>
-    <div class="star-6">
-      <svg xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 784.11 815.53" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" version="1.1" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"><defs></defs><g id="Layer_x0020_1"><metadata id="CorelCorpID_0Corel-Layer"></metadata><path d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z" class="fil0"></path></g></svg>
-    </div>
-  </button></a>
-  <div class="icon">
+    <button id="curriculum">
+      Scarica il mio curriculum <i class="ps-1 bi bi-download"></i>
+      <div class="star-1">
+        <svg
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 784.11 815.53"
+          style="
+            shape-rendering: geometricPrecision;
+            text-rendering: geometricPrecision;
+            image-rendering: optimizeQuality;
+            fill-rule: evenodd;
+            clip-rule: evenodd;
+          "
+          version="1.1"
+          xml:space="preserve"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <defs></defs>
+          <g id="Layer_x0020_1">
+            <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+            <path
+              d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+              class="fil0"
+            ></path>
+          </g>
+        </svg>
+      </div>
+      <div class="star-2">
+        <svg
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 784.11 815.53"
+          style="
+            shape-rendering: geometricPrecision;
+            text-rendering: geometricPrecision;
+            image-rendering: optimizeQuality;
+            fill-rule: evenodd;
+            clip-rule: evenodd;
+          "
+          version="1.1"
+          xml:space="preserve"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <defs></defs>
+          <g id="Layer_x0020_1">
+            <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+            <path
+              d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+              class="fil0"
+            ></path>
+          </g>
+        </svg>
+      </div>
+      <div class="star-3">
+        <svg
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 784.11 815.53"
+          style="
+            shape-rendering: geometricPrecision;
+            text-rendering: geometricPrecision;
+            image-rendering: optimizeQuality;
+            fill-rule: evenodd;
+            clip-rule: evenodd;
+          "
+          version="1.1"
+          xml:space="preserve"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <defs></defs>
+          <g id="Layer_x0020_1">
+            <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+            <path
+              d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+              class="fil0"
+            ></path>
+          </g>
+        </svg>
+      </div>
+      <div class="star-4">
+        <svg
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 784.11 815.53"
+          style="
+            shape-rendering: geometricPrecision;
+            text-rendering: geometricPrecision;
+            image-rendering: optimizeQuality;
+            fill-rule: evenodd;
+            clip-rule: evenodd;
+          "
+          version="1.1"
+          xml:space="preserve"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <defs></defs>
+          <g id="Layer_x0020_1">
+            <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+            <path
+              d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+              class="fil0"
+            ></path>
+          </g>
+        </svg>
+      </div>
+      <div class="star-5">
+        <svg
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 784.11 815.53"
+          style="
+            shape-rendering: geometricPrecision;
+            text-rendering: geometricPrecision;
+            image-rendering: optimizeQuality;
+            fill-rule: evenodd;
+            clip-rule: evenodd;
+          "
+          version="1.1"
+          xml:space="preserve"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <defs></defs>
+          <g id="Layer_x0020_1">
+            <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+            <path
+              d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+              class="fil0"
+            ></path>
+          </g>
+        </svg>
+      </div>
+      <div class="star-6">
+        <svg
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 784.11 815.53"
+          style="
+            shape-rendering: geometricPrecision;
+            text-rendering: geometricPrecision;
+            image-rendering: optimizeQuality;
+            fill-rule: evenodd;
+            clip-rule: evenodd;
+          "
+          version="1.1"
+          xml:space="preserve"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <defs></defs>
+          <g id="Layer_x0020_1">
+            <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+            <path
+              d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+              class="fil0"
+            ></path>
+          </g>
+        </svg>
+      </div></button
+  ></a>
+  <div class="icond">
     <i class="bi bi-caret-down-fill text-light"></i>
   </div>
 </div>
+
+<div class="about text-center">
+  <p id="title">About</p>
+  <div class="d-flex justify-content-center gap-5 pb-5">
+    <div data-aos="zoom-in" data-aos-duration="2000">
+      <img src="../../assets/img/fotoPort (2).png" alt="Foto Personale">
+    </div>
+    <div data-aos="zoom-in" data-aos-duration="2000">
+      <p id="nome"><span>&lt; </span>Gustavo Oliveira<span> /&gt;</span></p>
+      <ul>
+        <li><i class="bi1 bi-pc-display"></i> Ciao, sono Gustavo Oliveira ho 22 anni. Sono nato in Brasile e vissuto per 6 anni in Giappone, da sempre abituato a viaggiare e a ripristinare efficacemente l'equilibrio.
+          Dinamico diplomato in Amministrazione Finanza e Marketing, sono entusiasta di cimentarmi all’interno del mondo del lavoro per accrescere le mie competenze. Ho sviluppato in questo percorso di vita un'ardente passione per lo sviluppo web tanto da voler subito applicare quanto appreso, Da sempre appassionato al mondo dell’informatica, con capacità di lavorare bene sia in gruppo sia in autonomia.</li>
+      </ul>
+    </div>
+  </div>
+  <p id="title2">
+    Skills
+  </p>
+  <div class="skillsContent">
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon1 devicon-angularjs-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon2 devicon-html5-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class=" icon icon3 devicon-css3-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class=" icon icon4 devicon-javascript-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon5 devicon-typescript-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon6 devicon-bootstrap-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon7 devicon-sass-original"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon8 devicon-java-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon9 devicon-nodejs-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon10 devicon-postgresql-plain"></i>
+    </div>
+    <div data-aos="fade-up" data-aos-duration="2000">
+      <i class="icon icon11 devicon-spring-plain"></i>
+    </div>
+    <div data-aos="fade-down" data-aos-duration="2000">
+      <i class="icon icon12 devicon-github-original"></i>
+    </div>
+</div>
+</div>
+
+<div class="contacts text-center">
+  <p id="titlec">Contacts</p>
+  <div class="socialMedias">
+    <a
+      class="socialMediaLogo linkedin"
+      data-aos="fade-up"
+      data-aos-duration="2000"
+      href="https://www.linkedin.com/in/gustavochead/"
+      target="_blank"
+    >
+      <i class="linkedinLogo bi bi-linkedin"></i>
+      <p class="mediaName">Linkedin/GustavoChead/</p>
+    </a>
+    <a
+      class="socialMediaLogo github"
+      data-aos="fade-up"
+      data-aos-duration="2000"
+      href="https://github.com/Gust4voo"
+      target="_blank"
+    >
+      <i class="githubLogo bi bi-github"></i>
+      <p class="mediaName">Github/Gust4voo</p>
+    </a>
+    <a
+      class="socialMediaLogo instagram"
+      data-aos="fade-up"
+      data-aos-duration="2000"
+      href="https://www.instagram.com/guz.oliveiraa/"
+      target="_blank"
+    >
+      <i class="instagramLogo bi bi-instagram"></i>
+      <p class="mediaName">Instagram/Guz.oliveiraa</p>
+    </a>
+    <a
+      class="socialMediaLogo phone"
+      data-aos="fade-up"
+      data-aos-duration="2000"
+      href="https://wa.me/393207270107"
+      target="_blank"
+    >
+      <i class="phoneLogo bi bi-phone"></i>
+      <p class="mediaName">+39 3207270107</p>
+    </a>
+    <a
+      class="socialMediaLogo2 email"
+      data-aos="fade-up"
+      data-aos-duration="2000"
+      href="https://accounts.google.com/InteractiveLogin/signinchooser?elo=1&ifkv=AVQVeywoug4unCS79TyPuqH3cFzoiE5INVCtk0phcPDRhKlgjdglUT8UdC9AeQqlHg_2q2XFV_VZ0Q&theme=glif&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
+      target="_blank"
+    >
+      <i class="emailLogo bi bi-envelope"></i>
+      <p class="mediaName">Gustavo.Oliveira.Abdo.Chead@gmail.com</p>
+    </a>
+  </div>
+  <div
+    class="spazio d-flex justify-content-center pb-5"
+    data-aos="slide-up"
+    data-aos-duration="2000"
+  >
+    <div class="form-container">
+      <form class="form" action="https://formspree.io/f/xqkvoaob"
+      method="POST">
+        <div class="form-group">
+          <label for="name">Il tuo nome</label>
+          <input required="" name="name" id="name" type="text" />
+        </div>
+        <div class="form-group">
+          <label for="email">La tua email</label>
+          <input required="" name="email" id="email" type="text" />
+        </div>
+        <div class="form-group">
+          <label for="textarea">Il tuo messaggio</label>
+          <textarea
+            required=""
+            cols="50"
+            rows="10"
+            id="textarea"
+            name="textarea"
+          >
+          </textarea>
+        </div>
+        <button type="submit" class="invia form-submit-btn">Invia</button>
+      </form>
+    </div>
+  </div>
+</div>
+
