--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,9 +8,11 @@
     </a>
   </div>
   <div class="">
-    <a class="navLink" href="../home/home.component.html">home</a>
+    <a class="navLink" routerLink=""
+    routerLinkActive="active">home</a>
   </div>
   <div class="px-5">
-    <a class="navLink" href="#">progetti</a>
+    <a class="navLink" routerLink="progetti"
+    routerLinkActive="active">progetti</a>
   </div>
 </nav>
