--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 <div class="home text-center pb-5">
   <p id="ciao">CIAO, SONO GUSTAVO OLIVEIRA<span>.</span></p>
   <p id="full">
-    <span>Full-Stack</span> Developer innamorato per
-    <span>creare</span> sjdlfjdf dfj dfjhdhfd
+    Sono un <span>Full-Stack</span> Developer innamorato della
+    <span>sfida</span> continua, sempre alla ricerca di nuove soluzioni
+    creative.
   </p>
   <a href="../../assets/img/CV Gustavo Oliveira.pdf" target="_blank">
     <button id="curriculum">
@@ -165,21 +166,29 @@
 
 <div class="about text-center">
   <p id="title">About</p>
-  <div class="d-flex justify-content-center gap-5 pb-5">
+  <div class="aboutInfo d-flex justify-content-center gap-5 pb-5">
     <div data-aos="zoom-in" data-aos-duration="2000">
-      <img src="../../assets/img/fotoPort (2).png" alt="Foto Personale">
+      <img src="../../assets/img/fotoPort (2).png" alt="Foto Personale" />
     </div>
-    <div data-aos="zoom-in" data-aos-duration="2000">
+    <div id="secondContentabout" data-aos="zoom-in" data-aos-duration="2000">
       <p id="nome"><span>&lt; </span>Gustavo Oliveira<span> /&gt;</span></p>
-      <ul>
-        <li><i class="bi1 bi-pc-display"></i> Ciao, sono Gustavo Oliveira ho 22 anni. Sono nato in Brasile e vissuto per 6 anni in Giappone, da sempre abituato a viaggiare e a ripristinare efficacemente l'equilibrio.
-          Dinamico diplomato in Amministrazione Finanza e Marketing, sono entusiasta di cimentarmi all’interno del mondo del lavoro per accrescere le mie competenze. Ho sviluppato in questo percorso di vita un'ardente passione per lo sviluppo web tanto da voler subito applicare quanto appreso, Da sempre appassionato al mondo dell’informatica, con capacità di lavorare bene sia in gruppo sia in autonomia.</li>
+      <ul id="infoItem">
+        <li id="sottoNome">
+          <i class="bi1 bi-pc-display"></i> Ciao, sono Gustavo Oliveira ho 22
+          anni. Sono nato in Brasile e vissuto per 6 anni in Giappone, da sempre
+          abituato a viaggiare e a ripristinare efficacemente l'equilibrio.
+          Dinamico diplomato in Amministrazione Finanza e Marketing, sono
+          entusiasta di cimentarmi all’interno del mondo del lavoro per
+          accrescere le mie competenze. Ho sviluppato in questo percorso di vita
+          un'ardente passione per lo sviluppo web tanto da voler subito
+          applicare quanto appreso, Da sempre appassionato al mondo
+          dell’informatica, con capacità di lavorare bene sia in gruppo sia in
+          autonomia.
+        </li>
       </ul>
     </div>
   </div>
-  <p id="title2">
-    Skills
-  </p>
+  <p id="title2">Skills</p>
   <div class="skillsContent">
     <div data-aos="fade-up" data-aos-duration="2000">
       <i class="icon icon1 devicon-angularjs-plain"></i>
@@ -188,10 +197,10 @@
       <i class="icon icon2 devicon-html5-plain"></i>
     </div>
     <div data-aos="fade-up" data-aos-duration="2000">
-      <i class=" icon icon3 devicon-css3-plain"></i>
+      <i class="icon icon3 devicon-css3-plain"></i>
     </div>
     <div data-aos="fade-down" data-aos-duration="2000">
-      <i class=" icon icon4 devicon-javascript-plain"></i>
+      <i class="icon icon4 devicon-javascript-plain"></i>
     </div>
     <div data-aos="fade-up" data-aos-duration="2000">
       <i class="icon icon5 devicon-typescript-plain"></i>
@@ -217,7 +226,7 @@
     <div data-aos="fade-down" data-aos-duration="2000">
       <i class="icon icon12 devicon-github-original"></i>
     </div>
-</div>
+  </div>
 </div>
 
 <div class="contacts text-center">
@@ -271,7 +280,7 @@
       target="_blank"
     >
       <i class="emailLogo bi bi-envelope"></i>
-      <p class="mediaName">Gustavo.Oliveira.Abdo.Chead@gmail.com</p>
+      <p class="mediaName1">Gustavo.Oliveira.Abdo.Chead@gmail.com</p>
     </a>
   </div>
   <div
@@ -280,8 +289,7 @@
     data-aos-duration="2000"
   >
     <div class="form-container">
-      <form class="form" action="https://formspree.io/f/xqkvoaob"
-      method="POST">
+      <form class="form" action="https://formspree.io/f/xqkvoaob" method="POST">
         <div class="form-group">
           <label for="name">Il tuo nome</label>
           <input required="" name="name" id="name" type="text" />
@@ -306,4 +314,3 @@
     </div>
   </div>
 </div>
-
