--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -33,3 +33,24 @@
       transform: translateY(-10px);
   }
 }
+
+@media screen and (min-width: 320px) and (max-width: 480px) {
+  #gustavo{
+    padding-left: 2rem;
+    padding-bottom: 1rem;
+    color: white;
+  }
+
+  .icon {
+    color: #fff;
+    right: 2rem;
+    bottom: 3px;
+    position: fixed;
+    font-size: 2rem;
+    animation: arrowUp 2s infinite;
+    transition: .3s;
+    padding-bottom: 9.5px;
+  }
+
+
+}
