--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,20 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <a class="navbar-brand" href="#">
-      <img
-        src="../../assets/img/Logoportfolio.svg"
-        alt="Bootstrap"
-      />
+      <img src="../../assets/img/Logoportfolio.svg" alt="Bootstrap" />
     </a>
   </div>
-  <div class="">
-    <a class="navLink" routerLink=""
-    routerLinkActive="active">home</a>
-  </div>
-  <div class="px-5">
-    <a class="navLink" routerLink="progetti"
-    routerLinkActive="active">progetti</a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="">
+      <a class="navLink" routerLink="" routerLinkActive="active">home</a>
+    </div>
+    <div class="px-5">
+      <a class="navLink" routerLink="progetti" routerLinkActive="active"
+        >progetti</a
+      >
+    </div>
   </div>
 </nav>
